== Changelog ==
= 1.0.0 - 2022-05-04 =

* 2022-06-28 : fix bug checking qrnone status from api
* 2022-05-30 : fix bug qrnone not rendering
* 2022-05-04 : fix bug qrnone not redirect after payment success and add option stock reduce in admin config
* 2022-04-18 : add log data for investigated and update payment api
* 2022-02-20 : fix bug wordpress 5.9 not auto enqueue style
* 2022-01-13 : fix bug action hook not triggered
* 2021-12-19 : fix bug create card payment with buyer pay fee and add description of status after pay 
* 2021-11-21 : fix bug payment form not compatible themes
* 2021-10-17 : fix bug render html text
* 2021-10-09 : fix bug installment channel
* 2021-08-09 : fix bug remove some data on post meta
* 2021-08-04 : fix bug some Wordpress version can't working
* 2021-07-02 : fix bug credit card and installment with option buyer pay fees
* 2021-06-28 : verify credit card payment form
* 2021-06-23 : add shortcut credit card on place order page
* 2021-05-12 : Fixed QR auto kill transaction id on server and add Time countdown on qr pay page.
* 2021-03-11 : Fixed bugs the order status update system.
* 2021-03-09 : Added the buyer system, responsible for the fee in the installment payment system.
* 2021-02-23 : Fixed payment bugs and product details.
* 2021-02-10 : Fixed stock reduction bugs and updated QR code expiration time settings.
* 2021-01-18 : Added a setting to be able to select the expiration time of the QR Code.
* 2021-01-15 : Added buyer fee system and plugin update system.
* 2020-12-28 : Updated security system UI type 1.
* 2020-12-19 : Updated settings to set order status when payment is complete ( QR Code and installment )
* 2020-11-18 : Updated redirect to the order received page upon successful payment.
* 2020-11-15 : Updated redirect to the order detail page upon successful payment and bugs fix.
* 2020-09-07 : Updated setting (Enter the buyer information in the transaction id)